force-app/main/default/objects/CRM_Settings__c/CRM_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Org Setups e.g., ORG URL https://na2.salesforce.com</description>
    <label>CRM Settings</label>
</CustomObject>