force-app/main/default/objects/CRM_Settings__c/fields/Community_URL__c.field-meta.xml
<CustomField>
    <fullName>Community_URL__c</fullName>
    <defaultValue>&quot;https://npncommunity.force.com&quot;</defaultValue>
    <description>Community URL : Used in Lead Routing Rules (Ex: https://npncommunity.force.com)</description>
    <inlineHelpText>Community URL : Used in Lead Routing Rules (Ex: https://npncommunity.force.com)</inlineHelpText>
    <label>Community URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>