force-app/main/default/objects/CRM_Settings__c/fields/ORG_URL__c.field-meta.xml
<CustomField>
    <fullName>ORG_URL__c</fullName>
    <defaultValue>&quot;https://na2.salesforce.com&quot;</defaultValue>
    <description>NVIDIA ORG URL e.g., https://na2.salesforce.com&quot;</description>
    <inlineHelpText>NVIDIA ORG URL e.g., https://na2.salesforce.com&quot;</inlineHelpText>
    <label>ORG URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>