force-app/main/default/objects/CRM_Settings__c/fields/S2S_Connection_ID_Mellanox__c.field-meta.xml
<CustomField>
    <fullName>S2S_Connection_ID_Mellanox__c</fullName>
    <description>This field stores Salesforce to Salesforce connection ID with Mellanox org. It is currently used in a service cloud flow. (SDS-2773)</description>
    <inlineHelpText>This field stores Salesforce to Salesforce connection ID with Mellanox org. It is currently used in a service cloud flow.</inlineHelpText>
    <label>S2S Connection ID: Mellanox</label>
    <length>18</length>
    <type>Text</type>
</CustomField>